resolving code smells